<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.monyert.studentswork.MainActivity">

    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/action_home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_buttons"
        android:orderInCategory="100"
        android:title="@string/action_buttons"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_web"
        android:orderInCategory="100"
        android:title="@string/action_web"
        app:showAsAction="never">
        <menu >
            <item android:id="@+id/sub_web_item1"
                  android:orderInCategory="100"
                  android:title="@string/sub_web1"
                  app:showAsAction="never" />
            <item android:id="@+id/sub_web_item2"
                android:orderInCategory="100"
                android:title="@string/sub_web2"
                app:showAsAction="never" />
            <item android:id="@+id/sub_web_item3"
                android:orderInCategory="100"
                android:title="@string/sub_web3"
                app:showAsAction="never" />
        </menu>
    </item>
    <item
        android:id="@+id/action_lists"
        android:orderInCategory="100"
        android:title="@string/action_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
